refactor: consolidate JSON on MCP SDK mapper