@@ -1,92 +1,88 @@
 package dev.mcdevmcp.mcp;
 
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
 import dev.mcdevmcp.support.Cancellation;
+import io.modelcontextprotocol.json.McpJsonDefaults;
+import io.modelcontextprotocol.json.McpJsonMapper;
+import io.modelcontextprotocol.json.TypeRef;
 import io.modelcontextprotocol.spec.McpSchema;
 import org.junit.jupiter.api.Test;
 
 import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.time.Duration;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class McpStdioIntegrationTest {
     private static final Path JAR = Path.of(System.getProperty("mcdevMcpJar"));
     private static final Path JAVA = Path.of(System.getProperty("mcdevMcpJava"));
+    private static final McpJsonMapper MAPPER = McpJsonDefaults.getMapper();
+    private static final TypeRef<Map<String, Object>> MAP_TYPE = new TypeRef<>() {
+    };
+    private static final TypeRef<List<Map<String, Object>>> LIST_OF_MAPS_TYPE = new TypeRef<>() {
+    };
 
-    private static void assertProtocolMatches(String contractName, JsonObject actual, boolean normalizeVersion) throws IOException {
-        var expected = readContract(contractName);
+    private static void assertProtocolMatches(String contractName, Map<String, Object> actual, boolean normalizeVersion) throws IOException {
+        var expected = new LinkedHashMap<>(ToolCatalogContractTest.readContract(contractName));
         expected.remove("id");
-        actual = actual.deepCopy();
+        actual = new LinkedHashMap<>(actual);
         actual.remove("id");
         if (normalizeVersion) {
-            expected.getAsJsonObject("result").getAsJsonObject("serverInfo").addProperty("version", System.getProperty("mcdevMcpVersion"));
+            var result = new LinkedHashMap<>(MAPPER.convertValue(expected.get("result"), MAP_TYPE));
+            var serverInfo = new LinkedHashMap<>(MAPPER.convertValue(result.get("serverInfo"), MAP_TYPE));
+            serverInfo.put("version", System.getProperty("mcdevMcpVersion"));
+            result.put("serverInfo", serverInfo);
+            expected.put("result", result);
         }
         assertEquals(ToolCatalogContractTest.normalize(expected), ToolCatalogContractTest.normalize(actual));
     }
 
-    private static JsonObject readJsonLine(BufferedReader reader) throws IOException {
+    private static Map<String, Object> readJsonLine(BufferedReader reader) throws IOException {
         String line = reader.readLine();
         assertNotNull(line, "server closed STDOUT before responding");
-        JsonElement parsed = JsonParser.parseString(line);
-        assertTrue(parsed.isJsonObject(), () -> "non-JSON STDOUT line: " + line);
-        return parsed.getAsJsonObject();
+        return MAPPER.readValue(line, MAP_TYPE);
     }
 
-    private static JsonObject readContract(String name) throws IOException {
-        try (var input = McpStdioIntegrationTest.class.getResourceAsStream("/contracts/mcp/" + name)) {
-            if (input == null) {
-                throw new IOException("Missing contract: " + name);
-            }
-            return JsonParser.parseReader(new InputStreamReader(input, StandardCharsets.UTF_8)).getAsJsonObject();
-        }
-    }
-
-    private static void write(OutputStreamWriter writer, JsonObject message) throws IOException {
-        writer.write(message + System.lineSeparator());
+    private static void write(OutputStreamWriter writer, Map<String, Object> message) throws IOException {
+        writer.write(MAPPER.writeValueAsString(message) + System.lineSeparator());
         writer.flush();
     }
 
-    private static JsonObject request(int id, String method, JsonObject params) {
-        var request = object("jsonrpc", "2.0");
-        request.addProperty("id", id);
-        request.addProperty("method", method);
-        request.add("params", params);
+    private static Map<String, Object> request(int id, String method, Map<String, Object> params) {
+        var request = new LinkedHashMap<String, Object>();
+        request.put("jsonrpc", "2.0");
+        request.put("id", id);
+        request.put("method", method);
+        request.put("params", params);
         return request;
     }
 
-    private static JsonObject initializedNotification() {
-        var notification = object("jsonrpc", "2.0");
-        notification.addProperty("method", "notifications/initialized");
-        notification.add("params", new JsonObject());
-        return notification;
+    private static Map<String, Object> initializedNotification() {
+        return Map.of("jsonrpc", "2.0", "method", "notifications/initialized", "params", Map.of());
     }
 
-    private static JsonObject initializeParams() {
-        var params = object("protocolVersion", "2024-11-05");
-        params.add("capabilities", new JsonObject());
-        var clientInfo = object("name", "contract-test");
-        clientInfo.addProperty("version", "1");
-        params.add("clientInfo", clientInfo);
-        return params;
+    private static Map<String, Object> initializeParams() {
+        return Map.of(
+                "protocolVersion", "2024-11-05",
+                "capabilities", Map.of(),
+                "clientInfo", Map.of("name", "contract-test", "version", "1"));
     }
 
-    private static JsonObject object(String firstKey, String firstValue) {
-        var object = new JsonObject();
-        object.addProperty(firstKey, firstValue);
-        return object;
+    private static ToolBinding<TestEmptyArguments> binding(ToolHandler<TestEmptyArguments> handler) {
+        return new ToolBinding<>(ArgumentDecoder.sdk(TestEmptyArguments.class), handler);
     }
 
     @Test
@@ -95,36 +91,34 @@ class McpStdioIntegrationTest {
         try {
             var writer = new OutputStreamWriter(process.getOutputStream(), StandardCharsets.UTF_8);
             try (var reader = new BufferedReader(
-                    new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
+                    new java.io.InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
                 try {
                     write(writer, request(1, "initialize", initializeParams()));
                     var initialize = readJsonLine(reader);
                     write(writer, initializedNotification());
-                    write(writer, request(2, "tools/list", new JsonObject()));
+                    write(writer, request(2, "tools/list", Map.of()));
                     var tools = readJsonLine(reader);
-                    write(writer, request(3, "resources/list", new JsonObject()));
+                    write(writer, request(3, "resources/list", Map.of()));
                     var resources = readJsonLine(reader);
                     write(writer, request(
                             4,
                             "resources/read",
-                            object("uri", "mcdev://guides/python-scripting")));
+                            Map.of("uri", "mcdev://guides/python-scripting")));
                     var resource = readJsonLine(reader);
-                    write(writer, request(5, "tools/call", object("name", "not_a_tool")));
+                    write(writer, request(5, "tools/call", Map.of("name", "not_a_tool")));
                     var unknownTool = readJsonLine(reader);
 
                     assertProtocolMatches("initialize.json", initialize, true);
                     assertProtocolMatches("tools-list-default.json", tools, false);
                     assertProtocolMatches("resources-list.json", resources, false);
                     assertProtocolMatches("resource-python-scripting.json", resource, false);
-                    assertTrue(unknownTool.getAsJsonObject("result").get("isError").getAsBoolean());
+                    var unknownResult = MAPPER.convertValue(unknownTool.get("result"), MAP_TYPE);
+                    assertEquals(true, unknownResult.get("isError"));
                     assertEquals(
                             "Unknown tool: not_a_tool",
-                            unknownTool.getAsJsonObject("result")
-                                    .getAsJsonArray("content")
-                                    .get(0)
-                                    .getAsJsonObject()
-                                    .get("text")
-                                    .getAsString());
+                            MAPPER.convertValue(unknownResult.get("content"), LIST_OF_MAPS_TYPE)
+                                    .getFirst()
+                                    .get("text"));
                 } finally {
                     writer.close();
                 }
@@ -155,16 +149,21 @@ class McpStdioIntegrationTest {
     void incompleteHandlerDoesNotBlockAnotherRequestAndCancellationCancelsItsFuture() throws Exception {
         var pending = new CompletableFuture<ToolResult>();
         var cancellation = new AtomicReference<Cancellation>();
-        var adapter = new McpSdkAdapter();
-        var slow = new ToolDefinition("slow", "slow", new JsonObject(), (_, signal) -> {
-            cancellation.set(signal);
-            return pending;
-        }, ToolAvailability.ALWAYS);
+        var adapter = new McpSdkAdapter(MAPPER);
+        var slow = new ToolDefinition(
+                "slow",
+                "slow",
+                Map.of("type", "object"),
+                binding((_, signal) -> {
+                    cancellation.set(signal);
+                    return pending;
+                }),
+                ToolAvailability.ALWAYS);
         var fast = new ToolDefinition(
                 "fast",
                 "fast",
-                new JsonObject(),
-                (_, _) -> ToolHandlers.completed(ToolResult.text("fast")),
+                Map.of("type", "object"),
+                binding((_, _) -> ToolHandlers.completed(ToolResult.text("fast"))),
                 ToolAvailability.ALWAYS);
 
         var slowRequest = McpSchema.CallToolRequest.builder("slow")
@@ -187,22 +186,21 @@ class McpStdioIntegrationTest {
 
     @Test
     void synchronousAndAsynchronousHandlerFailuresBecomeToolErrors() throws Exception {
-        ToolDefinition synchronous = new ToolDefinition(
+        var synchronous = new ToolDefinition(
                 "sync",
                 "sync",
-                object("type", "object"),
-                (_, _) -> {
+                Map.of("type", "object"),
+                binding((_, _) -> {
                     throw new IllegalStateException("sync failure");
-                },
+                }),
                 ToolAvailability.ALWAYS);
-        ToolDefinition asynchronous = new ToolDefinition(
+        var asynchronous = new ToolDefinition(
                 "async",
                 "async",
-                object("type", "object"),
-                (_, _) ->
-                        CompletableFuture.failedFuture(new IllegalStateException("async failure")),
+                Map.of("type", "object"),
+                binding((_, _) -> CompletableFuture.failedFuture(new IllegalStateException("async failure"))),
                 ToolAvailability.ALWAYS);
-        var adapter = new McpSdkAdapter();
+        var adapter = new McpSdkAdapter(MAPPER);
 
         var syncResult = adapter.callHandler(synchronous)
                 .apply(null, McpSchema.CallToolRequest.builder("sync").arguments(Map.of()).build())
